# PokemonSImulator

./: .clangd  AGENTS.md  CLAUDE.md  CMakeCache.txt  CMakeLists.txt  DartConfiguration.tcl  Makefile  PokemonSimulator  ToDo.json  cmake_install.cmake  plan.md
.cache/clangd/index/: Abilities.cpp.2415C35F186AA2E8.idx  Abilities.cpp.9804C9A2063A6467.idx  Abilities.h.0AD5E819A130F1C7.idx  Abilities.h.17F429EC2FDC040C.idx  AbilityData.cpp.700EA954AD7DF154.idx  AbilityData.cpp.B563B311F363819F.idx  AbilityData.h.7E6793C6EB0F22FD.idx  Animated.cpp.39F864DC7971054A.idx  Animated.h.A3425CAE91366DB8.idx  Battle.cpp.AD10060EF11C6FD3.idx  Battle.cpp.FCDC2BDBF8C8C73F.idx  Battle.h.387FF8AFEC1242C7.idx  Battle.h.E2A1A24FE031DC31.idx  BattleActions.cpp.1ACA551F41F3F26C.idx  BattleActions.cpp.C2AE91F6D2FC8877.idx  BattleActions.h.5A133BFB50BD88E8.idx  BattleActions.h.B15A63490F77B948.idx  BattleContext.cpp.55E783618905A645.idx  BattleContext.cpp.58F4730D10E929AC.idx  BattleContext.h.84A9460F8A248312.idx  BattleContext.h.A8201FE4E5578142.idx  BattleData.h.28EB4B1EE3A1B7C1.idx  BattleData.h.F3C6DB1F394AECA1.idx  BattleMath.cpp.8421EF6F6C62D400.idx  BattleMath.cpp.8DAF67885DDD35B1.idx  BattleMath.h.C2E75546812EA35A.idx  BattleMath.h.E17B8B5D043AE719.idx  BattleQueue.cpp.CD1E68726C84ABBD.idx  BattleQueue.cpp.D64A08BB72F164BA.idx  BattleQueue.h.05CF08008F082CEC.idx  (+123 more)
.claude/: settings.local.json
.github/prompts/: implement-move-by-mechanic.prompt.md
cache/: battle_action_start_0_attack.json  battle_action_start_16_attack.json  battle_action_start_16_switch.json  battle_action_start_1_attack.json  battle_action_start_22_attack.json  battle_action_start_26_switch.json  battle_action_start_2_attack.json  battle_action_start_3_attack.json  battle_action_start_3_switch.json  battle_action_start_4_attack.json  battle_action_start_5_attack.json  battle_action_start_6_attack.json  battle_action_start_7_attack.json  battle_attack_result_0_ImprisonTarget_Pound.json  battle_attack_result_10_Blastoise_Earthquake.json  battle_attack_result_10_Blastoise_Hydro Pump.json  battle_attack_result_10_Blastoise_Water Gun.json  battle_attack_result_10_Pikachu_Earthquake.json  battle_attack_result_10_Venusaur_Giga Drain.json  battle_attack_result_11_Blastoise_Earthquake.json  battle_attack_result_11_Blastoise_Hydro Pump.json  battle_attack_result_11_Blastoise_Water Gun.json  battle_attack_result_11_Charizard_Fly.json  battle_attack_result_11_Charizard_Protect.json  battle_attack_result_11_Pikachu_Earthquake.json  battle_attack_result_11_Venusaur_Earthquake.json  battle_attack_result_11_Venusaur_Giga Drain.json  battle_attack_result_12_Blastoise_Hydro Pump.json  battle_attack_result_12_Charizard_Fly.json  battle_attack_result_12_Charizard_Protect.json  battle_attack_result_12_Pikachu_Earthquake.json  battle_attack_result_12_Venusaur_Giga Drain.json  battle_attack_result_13_Blastoise_Hydro Pump.json  battle_attack_result_13_Charizard_Fly.json  battle_attack_result_13_Venusaur_Giga Drain.json  battle_attack_result_14_Blastoise_Earthquake.json  battle_attack_result_14_Blastoise_Hydro Pump.json  battle_attack_result_14_Charizard_Protect.json  battle_attack_result_14_Pikachu_Earthquake.json  battle_attack_result_14_Venusaur_Earthquake.json  (+201 more)
cache/input/: 2_input_0.json  2_input_1.json  init_request.json
cache/output/: output_0.json  output_1.json  output_2.json  output_3.json  output_4.json  output_5.json
data/: abilities.json  blastoise.json  charizard.json  fetched_abilities.json  fetched_moves.json  fetched_species.json  init_request.json  items.json  moves.json  pikachu.json  side_a.json  side_b.json  species.json  venusaur.json
docs/: ToDo.json  memory.md  moves-progress.csv  moves-progress.md  prompt.md
include/: Animated.h  Core.h  Image.h  SDLH.h  Scene.h  SceneManager.h
include/Battle/: Abilities.h  Battle.h  BattleActions.h  BattleData.h  BattleMath.h  BattleQueue.h  BattleSession.h  BattleToJson.h  BuildFromJson.h  Effect.h  EventSystem.h  ItemTestRunner.h  Items.h  MoveEffectHandler.h  MoveRuleRegistry.h  MoveTestRunner.h  Moves.h  Natures.h  PRNG.h  Pokemon.h  Side.h  Species.h  Status.h  Types.h  Utils.h  Weather.h
include/GUIUtils/: Button.h  Dialog.h  HealthBar.h  Label.h  Message.h  TextBox.h
include/IO/: BattleSession.h  BattleToJson.h  BuildFromJson.h
include/Scenes/: BattleScene.h  TestScene.h
include/battle/: Abilities.h  Battle.h  BattleActions.h  BattleContext.h  BattleData.h  BattleMath.h  BattleQueue.h  EventSystem.h  Field.h  GameRegistry.h  Items.h  MoveEffectHandler.h  Moves.h  OnCondition.h  Pokemon.h  Side.h  Species.h  Status.h  Weather.h
include/tests/: ItemTestRunner.h
scripts/: _count_gaps.py  check_gaps.py  fetch_pokeapi_data.py  full_battle_daemon.py  generate_move_matrix.py
src/: Animated.cpp  Core.cpp  Image.cpp  SceneManager.cpp  main.cpp
src/Battle/: Abilities.cpp  AbilityData.cpp  Battle.cpp  BattleActions.cpp  BattleMath.cpp  BattleQueue.cpp  BattleSession.cpp  BattleToJson.cpp  BuildFromJson.cpp  CMakeLists.txt  Effect.cpp  EventSystem.cpp  Field.cpp  ItemData.cpp  ItemTestRunner.cpp  Items.cpp  MoveData.cpp  MoveEffectHandler.cpp  MoveRuleRegistry.cpp  MoveTestRunner.cpp  Moves.cpp  Natures.cpp  PRNG.cpp  Pokemon.cpp  Side.cpp  Status.cpp  Utils.cpp  Weather.cpp
src/GUI/: Button.cpp
src/GUIUtils/: Button.cpp  Dialog.cpp  HealthBar.cpp  Label.cpp  Message.cpp  TextBox.cpp
src/IO/: AbilityData.cpp  BattleSession.cpp  BattleToJson.cpp  BuildFromJson.cpp  ItemData.cpp  MoveData.cpp
src/Scenes/: BattleScene.cpp  TestScene.cpp
src/battle/: Abilities.cpp  Battle.cpp  BattleActions.cpp  BattleContext.cpp  BattleMath.cpp  BattleQueue.cpp  Effect.cpp  EventSystem.cpp  Field.cpp  GameRegistry.cpp  Items.cpp  MoveEffectHandler.cpp  Moves.cpp  Natures.cpp  PRNG.cpp  Pokemon.cpp  Side.cpp  Status.cpp  Utils.cpp  Weather.cpp
src/tests/: ItemTestRunner.cpp  MoveTestRunner.cpp
test/: test_Battle.cpp
tests/: battle_data_test.cpp
tmp/: battle_request.json  full_battle_driver  full_battle_driver.cpp  meaningful_battle.json  meaningful_battle_active.json
